plugins {
	id 'java'
	id 'jacoco'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.sonarqube" version "7.1.0.6387"
	id 'pmd'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Individual preparation for the Advanced Programming course at the Faculty of Computer Science Universitas Indonesia'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << '-parameters'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	implementation 'dev.samstevens.totp:totp:1.7.1'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
	runtimeOnly 'org.postgresql:postgresql'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

//	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-data-jpa-test'
	testRuntimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.springframework.retry:spring-retry:2.0.11'

	compileOnly 'org.projectlombok:lombok:1.18.32'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'

	testCompileOnly 'org.projectlombok:lombok:1.18.32'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'

	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
}

tasks.named('test') {
    useJUnitPlatform()
    exclude '**/*FunctionalTest.class'
    finalizedBy jacocoTestReport
}

tasks.named('jacocoTestReport') {
    dependsOn test
    executionData fileTree(layout.buildDirectory.get()).include("jacoco/*.exec")
    classDirectories.setFrom(files(classDirectories.files.collect {
        fileTree(dir: it, exclude: [
            '**/config/**',
            '**/*Seeder.class',
            '**/exception/**ExceptionHandler.class',
            '**/*Application.class'
        ])
    }))
    reports {
        xml.required = true
        html.required = true
    }
}

sonar {
	properties {
		property "sonar.projectKey", "advprog-2026-b11-project_bidmart-backend-2"
		property "sonar.organization", "advprog-2026-b11-project"
	}
}

pmd {
	consoleOutput = true
	toolVersion = "7.0.0"
	ignoreFailures = true
	rulesMinimumPriority = 5
	ruleSets = []
	ruleSetFiles = files("config/pmd/ruleset.xml")
}

